made img fixed on mobile

--- a/style/main.sass
+++ b/style/main.sass
@@ -5,9 +5,6 @@ body
   background-image: url(https://static.pexels.com/photos/48182/startrails-monument-valley-night-arizona-48182.jpeg)
   background-attachment: fixed
   background-size: cover
-  @media screen and (max-width: 768) 
-    background-attachment: fixed
-    background-size: cover
 i
   text-align: right
   float: right
@@ -71,3 +68,17 @@ h1
   color: white
 input.middle:focus 
   outline-width: 0
+body:before 
+  content: ""
+  display: block
+  position: fixed
+  left: 0
+  top: 0
+  width: 100%
+  height: 100%
+  z-index: -10
+  background: url(https://static.pexels.com/photos/48182/startrails-monument-valley-night-arizona-48182.jpeg) no-repeat center center
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
